--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -23,16 +23,16 @@ jobs:
 
       - name: Configure COSCLI
         env:
-          TC_SECRET_ID: ${{ secrets.TC_SECRET_ID }}
-          TC_SECRET_KEY: ${{ secrets.TC_SECRET_KEY }}
+          COS_SECRET_ID: ${{ secrets.COS_SECRET_ID }}
+          COS_SECRET_KEY: ${{ secrets.COS_SECRET_KEY }}
           COS_BUCKET: ${{ secrets.COS_BUCKET }}
           COS_ENDPOINT: ${{ secrets.COS_ENDPOINT }}
         run: |
           cat > ~/.cos.yaml <<EOF
           cos:
             base:
-              secretid: ${TC_SECRET_ID}
-              secretkey: ${TC_SECRET_KEY}
+              secretid: ${COS_SECRET_ID}
+              secretkey: ${COS_SECRET_KEY}
             buckets:
               - name: ${COS_BUCKET}
                 endpoint: ${COS_ENDPOINT}
@@ -58,6 +58,6 @@ jobs:
 
           for file in $FILES; do
             echo "Uploading $file..."
-            dest="souta/friend/${file#src/img/}"
+            dest="souta/img/friend/${file#src/img/}"
             coscli cp "$file" "cos://${COS_BUCKET}/${dest}"
           done
