chore: 添加 DIYgod 友情链接

--- a/src/links.yml
+++ b/src/links.yml
@@ -107,3 +107,8 @@
   url: "https://blog.yueer.moe"
   img: "yueer.moe.jpg"
   desc: "一个什么都想做却做不完的笨蛋"
+
+- name: "DIYgod"
+  url: "https://diygod.cc"
+  img: "diygod.cc.jpg"
+  desc: "写代码是热爱，写到世界充满爱！"
